--- a/frontend/src/addons/volto-ploneconf2023/.github/workflows/acceptance.yml
+++ b/frontend/src/addons/volto-ploneconf2023/.github/workflows/acceptance.yml
@@ -2,12 +2,11 @@ name: Acceptance tests
 on: [push]
 
 env:
-  ADDON_NAME: "volto-ploneconf2023"
-  ADDON_PATH: "volto-ploneconf2023"
-  VOLTO_VERSION: "17.0.0"
+  ADDON_NAME: 'volto-ploneconf2023'
+  ADDON_PATH: 'volto-ploneconf2023'
+  VOLTO_VERSION: '17.0.0'
 
 jobs:
-
   acceptance:
     runs-on: ubuntu-latest
     steps:
@@ -22,7 +21,7 @@ jobs:
           cd acceptance
           yarn
 
-      - name: "Cypress: Acceptance tests"
+      - name: 'Cypress: Acceptance tests'
         uses: cypress-io/github-action@v6
         env:
           BABEL_ENV: production
@@ -35,7 +34,7 @@ jobs:
           install: false
           start: |
             docker compose -f ci.yml --profile prod up
-          wait-on: 'npx wait-on --httpTimeout 20000 http-get://localhost:55001/plone http://localhost:3000'
+          wait-on: 'npx wait-on --httpTimeout 20000 http-get://127.0.0.1:55001/plone http://127.0.0.1:3000'
 
       # Upload Cypress screenshots
       - uses: actions/upload-artifact@v3
