--- a/frontend/src/addons/volto-ploneconf2023/acceptance/docker-compose.yml
+++ b/frontend/src/addons/volto-ploneconf2023/acceptance/docker-compose.yml
@@ -1,20 +1,19 @@
-version: "3"
+version: '3'
 
 services:
-
   addon-dev:
     build:
       context: ../
       dockerfile: ./dockerfiles/Dockerfile.acceptance
       args:
-        ADDON_NAME: "${ADDON_NAME}"
-        ADDON_PATH: "${ADDON_PATH}"
+        ADDON_NAME: '${ADDON_NAME}'
+        ADDON_PATH: '${ADDON_PATH}'
         VOLTO_VERSION: ${VOLTO_VERSION:-17}
     volumes:
       - ${CURRENT_DIR}:/app/src/addons/${ADDON_PATH}/
     environment:
       RAZZLE_INTERNAL_API_PATH: http://backend-acceptance:55001/plone
-      RAZZLE_API_PATH: http://localhost:55001/plone
+      RAZZLE_API_PATH: http://127.0.0.1:55001/plone
       HOST: 0.0.0.0
     ports:
       - 3000:3000
@@ -30,12 +29,12 @@ services:
       context: ../
       dockerfile: ./dockerfiles/Dockerfile
       args:
-        ADDON_NAME: "${ADDON_NAME}"
-        ADDON_PATH: "${ADDON_PATH}"
+        ADDON_NAME: '${ADDON_NAME}'
+        ADDON_PATH: '${ADDON_PATH}'
         VOLTO_VERSION: ${VOLTO_VERSION:-17}
     environment:
       RAZZLE_INTERNAL_API_PATH: http://backend-acceptance:55001/plone
-      RAZZLE_API_PATH: http://localhost:55001/plone
+      RAZZLE_API_PATH: http://127.0.0.1:55001/plone
       HOST: 0.0.0.0
     ports:
       - 3000:3000
