--- a/frontend/src/addons/volto-ploneconf2023/acceptance/ci.yml
+++ b/frontend/src/addons/volto-ploneconf2023/acceptance/ci.yml
@@ -1,17 +1,18 @@
-version: '3'
+version: "3"
 
 services:
+
   addon-acceptance:
     build:
       context: ../
       dockerfile: ./dockerfiles/Dockerfile
       args:
-        ADDON_NAME: '${ADDON_NAME}'
-        ADDON_PATH: '${ADDON_PATH}'
+        ADDON_NAME: "${ADDON_NAME}"
+        ADDON_PATH: "${ADDON_PATH}"
         VOLTO_VERSION: ${VOLTO_VERSION:-17}
     environment:
       RAZZLE_INTERNAL_API_PATH: http://backend-acceptance:55001/plone
-      RAZZLE_API_PATH: http://127.0.0.1:55001/plone
+      RAZZLE_API_PATH: http://localhost:55001/plone
     ports:
       - 3000:3000
     depends_on:
