--- a/frontend/src/addons/volto-ploneconf2023/dockerfiles/docker-compose.yml
+++ b/frontend/src/addons/volto-ploneconf2023/dockerfiles/docker-compose.yml
@@ -1,14 +1,15 @@
-version: '3'
+version: "3"
 
 services:
+
   addon-dev:
     build:
       context: ../
       dockerfile: ./dockerfiles/Dockerfile.dev
       args:
-        ADDON_NAME: '${ADDON_NAME}'
-        ADDON_PATH: '${ADDON_PATH}'
-        VOLTO_VERSION: '${VOLTO_VERSION:-17}'
+        ADDON_NAME: "${ADDON_NAME}"
+        ADDON_PATH: "${ADDON_PATH}"
+        VOLTO_VERSION: "${VOLTO_VERSION:-17}"
     volumes:
       - ${CURRENT_DIR}:/app/src/addons/${ADDON_PATH}/
     environment:
@@ -32,12 +33,12 @@ services:
       context: ../
       dockerfile: ./dockerfiles/Dockerfile
       args:
-        ADDON_NAME: '${ADDON_NAME}'
-        ADDON_PATH: '${ADDON_PATH}'
-        VOLTO_VERSION: '${VOLTO_VERSION:-17}'
+        ADDON_NAME: "${ADDON_NAME}"
+        ADDON_PATH: "${ADDON_PATH}"
+        VOLTO_VERSION: "${VOLTO_VERSION:-17}"
     environment:
       RAZZLE_INTERNAL_API_PATH: http://backend:8080/Plone
-      RAZZLE_API_PATH: http://127.0.0.1:8080/Plone
+      RAZZLE_API_PATH: http://localhost:8080/Plone
     ports:
       - 3000:3000
     tty: true
