be consistent in traefick labeling

--- a/devops/stacks/ploneconf2023-polyester.tangrama.com.br.yml
+++ b/devops/stacks/ploneconf2023-polyester.tangrama.com.br.yml
@@ -1,5 +1,5 @@
 ---
-version: '3.8'
+version: "3.8"
 
 services:
   traefik:
@@ -93,7 +93,7 @@ services:
         - traefik.http.routers.rt-frontend.tls=true
         - traefik.http.routers.rt-frontend.tls.certresolver=le
         - traefik.http.routers.rt-frontend.service=svc-frontend
-        - traefik.http.routers.frontend.middlewares=gzip
+        - traefik.http.routers.rt-frontend.middlewares=gzip
 
   backend:
     image: ghcr.io/polyester/ploneconf2023-backend:${STACK_PARAM:-latest}
